# blvm-bench

./: .env.example  .gitignore  .nojekyll  BENCHMARK_SPEED_CATEGORIZATION_PLAN.md  Cargo.toml  EXISTING_BITCOIND_HANDLING.md  EXISTING_NODE_SUPPORT.md  IMPLEMENTATION_EXPLANATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  PLAN_VALIDATION_REPORT.md  README.md  README_BENCHMARKING.md  README_DIFFERENTIAL_TESTING.md  REUSE_EXISTING_NODES.md  RUNNER_SETUP.md  RUN_DIFFERENTIAL_TESTS.md  TROUBLESHOOTING.md  VALIDATION_SUMMARY.md  WORKFLOW_VALIDATION.md  analyze_restarts.sh  check_cache_progress.sh  check_destructive_command.sh  check_fix.sh  check_restart_history.sh  check_status.sh  create_chunk_metadata.sh  fix_and_check_loop.sh  monitor_block1_fix.sh  monitor_cache_build.sh  monitor_cache_resume.sh  monitor_collection.sh  monitor_differential.sh  populate-cache-ssh.sh  populate-cache.sh  preflight_check.sh  protect_chunks.sh  run-benchmarks.sh  setup.sh  test-100-blocks.sh  (+3 more)
.github/workflows/: README.md  benchmarks-manual.yml  benchmarks.yml  differential-tests.yml  pages.yml
.github/workflows/archive/: benchmarks-sequential.yml
benches/consensus/: bllvm_optimizations.rs  block_assembly.rs  block_validation.rs  block_validation_realistic.rs  blvm_optimizations.rs  check_block.rs  hash_operations.rs  mempool_operations.rs  merkle_tree_precomputed.rs  performance_focused.rs  script_verification.rs  segwit_operations.rs  transaction_id.rs  transaction_serialization.rs  transaction_sighash.rs  transaction_validation.rs  utxo_commitments.rs
benches/integration/: node_sync_and_rpc.rs
benches/node/: compact_blocks.rs  dandelion_bench.rs  fibre_bench.rs  parallel_block_validation.rs  storage_operations.rs  transport_comparison.rs
docs/: BENCHMARK_CATEGORIZATION_ANALYSIS.md  BENCHMARK_COVERAGE.md  CNAME  CODEBASE_METRICS_IMPLEMENTATION.md  CODEBASE_METRICS_PROPOSAL.md  CODEBASE_METRICS_VALIDATION.md  COMPARISON_WITH_BENCH_BITCOIN.md  ENHANCEMENTS_AND_VALIDATION.md  MIGRATION_NOTES.md  README.md  REGRESSION_DETECTION.md  index.html
docs/data/: benchmark-results-consolidated-latest.json
scripts/: add_block1_to_chunk0.sh  benchmark-speed-map.sh  check-dependencies.sh  config.toml.example  detect-regressions.sh  discover-paths.sh  generate-consolidated-json.sh  generate-csv.sh  incremental_chunk_generator.sh  merge_scan_json.py  port-all-benchmarks.sh  port-benchmark.sh  run_chain_scan_3batches.sh  setup-dependencies.sh  split_and_compress_cache.sh  track-history.sh  update-gh-pages.sh  validate-benchmark.sh  verify_block_coverage.py  verify_scan_integrity.sh
scripts/commons/: block-assembly-bench.sh  block-serialization-bench.sh  block-validation-bench.sh  compact-block-encoding-bench.sh  connectblock-bench.sh  deep-analysis-bench.sh  duplicate-inputs-bench.sh  hash-micro-bench.sh  mempool-acceptance-bench.sh  mempool-bench.sh  mempool-operations-bench.sh  mempool-rbf-bench.sh  merkle-root-bench.sh  merkle-tree-bench.sh  merkle-tree-precomputed-bench.sh  node-sync-rpc-bench.sh  ripemd160-bench.sh  script-verification-bench.sh  segwit-bench.sh  standard-tx-bench.sh  transaction-id-bench.sh  transaction-serialization-bench.sh  transaction-sighash-bench.sh  transaction-validation-bench.sh  utxo-caching-bench.sh
scripts/core/: base58-bech32-bench.sh  block-assembly-bench.sh  block-serialization-bench.sh  block-validation-bench.sh  connectblock-bench.sh  duplicate-inputs-bench.sh  mempool-acceptance-bench.sh  mempool-operations-bench.sh  mempool-rbf-bench.sh  merkle-tree-bench.sh  ripemd160-bench.sh  script-verification-bench.sh  segwit-bench.sh  standard-tx-bench.sh  transaction-id-bench.sh  transaction-serialization-bench.sh  transaction-sighash-bench.sh  transaction-validation-bench.sh  utxo-caching-bench.sh
scripts/metrics/: code-size.sh  features.sh  tests.sh
scripts/metrics/shared/: metrics-common.sh
scripts/shared/: add-stats-to-benchmark.sh  common.sh  detect-bench-bitcoin-benchmarks.sh  extract-criterion-stats.sh  extract-nanobench-stats.sh  update-core-benchmark-filters.py  update-core-benchmark-filters.sh
scripts/shared/benchmarks/: concurrent-operations-fair.sh  memory-efficiency-fair.sh  parallel-block-validation-bench.sh  performance-rpc-http.sh
src/: block_cache_env.rs  block_file_reader.rs  chain_scan.rs  checkpoint_persistence.rs  chunk_index.rs  chunk_index_rpc.rs  chunk_protection.rs  chunked_cache.rs  collect_only.rs  core_builder.rs  core_rpc_client.rs  deep_analysis.rs  differential.rs  lib.rs  missing_blocks.rs  node_builder.rs  node_rpc_client.rs  parallel_differential.rs  regtest_node.rs  remote_core_rpc.rs  script_validation.rs  shell.rs  ssh_block_reader.rs  utils.rs
src/differential/: script_validation.rs
src/sort_merge/: input_refs.rs  merge_join.rs  mod.rs  output_refs.rs  verify.rs
tests/: collect_blocks.rs  debug_chunk_blocks.rs  debug_real_110300.rs  debug_script_110300.rs  debug_script_detailed.rs  find_block1.rs  find_block1_direct.rs  find_block1_quick.rs  find_block1_simple.rs  integration.rs  investigate_110300.rs  investigate_divergences.rs  mainnet_segwit_activation_chunk_cache_deserialize.rs  mainnet_segwit_activation_chunk_cache_sizes.rs  mainnet_segwit_activation_chunk_cache_wire_trace.rs  query_block15_txid.rs  remote_core_rpc_historical_test.rs  test_block1_logic.rs  test_block_481824.rs  test_block_481824_size.rs  trace_block_481824.rs  validate_checkpoints.rs  validate_existing_chunks.rs  verify_block1_fix.rs  verify_utxo_set.rs
tests/integration/: bip_differential.rs  helpers.rs  mod.rs  parallel_historical.rs
