[package]
name = "bllvm-bench"
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin Commons Team"]
description = "Development-only benchmarking suite for Bitcoin Commons BLLVM ecosystem"
license = "MIT"
repository = "https://github.com/BTCDecoded/bllvm-bench"
homepage = "https://btcdecoded.org"
keywords = ["bitcoin", "benchmarking", "performance", "testing"]
categories = ["development-tools", "algorithms"]
rust-version = "1.83"

# This is a dev-only crate, but we can test in production mode
# Use --features production to enable production optimizations during benchmarking

[dependencies]
# Benchmarking framework
criterion = "0.5"

# Bitcoin Commons dependencies for benchmarking
bllvm-consensus = { path = "../bllvm-consensus", features = ["production", "utxo-commitments"] }
bllvm-protocol = { path = "../bllvm-protocol" }
bllvm-node = { path = "../bllvm-node", features = ["dandelion"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Deep analysis (low-level metrics)
# Note: perf integration is done via shell scripts for portability

# Additional dependencies for benchmarks
rand = "0.8"
sha2 = "0.10"
tempfile = "3.8"
ripemd = "0.1"
secp256k1 = "0.28"

# For CLI tool to run shell benchmarks
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }

# HTTP client for RPC calls
reqwest = { version = "0.11", features = ["json"] }

# For finding executables in PATH
which = "5.0"
# For home directory detection
dirs = "5.0"
# For hex encoding/decoding
hex = "0.4"

[features]
default = []
# Enable production optimizations for benchmarking
# This allows testing benches in production mode even though this is a dev crate
production = ["bllvm-consensus/production"]
# Enable differential testing functionality
differential = []
# Enable benchmark helpers (uses differential infrastructure)
benchmark-helpers = ["differential"]

[dev-dependencies]
# Additional testing utilities if needed
proptest = "1.5"

# Benchmark targets - Consensus layer
[[bench]]
name = "hash_operations"
path = "benches/consensus/hash_operations.rs"
harness = false

[[bench]]
name = "block_validation"
path = "benches/consensus/block_validation.rs"
harness = false

[[bench]]
name = "block_validation_realistic"
path = "benches/consensus/block_validation_realistic.rs"
harness = false

[[bench]]
name = "mempool_operations"
path = "benches/consensus/mempool_operations.rs"
harness = false

[[bench]]
name = "segwit_operations"
path = "benches/consensus/segwit_operations.rs"
harness = false

[[bench]]
name = "transaction_validation"
path = "benches/consensus/transaction_validation.rs"
harness = false

[[bench]]
name = "check_block"
path = "benches/consensus/check_block.rs"
harness = false

[[bench]]
name = "utxo_commitments"
path = "benches/consensus/utxo_commitments.rs"
harness = false

[[bench]]
name = "bllvm_optimizations"
path = "benches/consensus/bllvm_optimizations.rs"
harness = false

[[bench]]
name = "performance_focused"
path = "benches/consensus/performance_focused.rs"
harness = false

[[bench]]
name = "merkle_tree_precomputed"
path = "benches/consensus/merkle_tree_precomputed.rs"
harness = false

[[bench]]
name = "script_verification"
path = "benches/consensus/script_verification.rs"
harness = false

[[bench]]
name = "block_assembly"
path = "benches/consensus/block_assembly.rs"
harness = false

[[bench]]
name = "transaction_sighash"
path = "benches/consensus/transaction_sighash.rs"
harness = false

[[bench]]
name = "transaction_id"
path = "benches/consensus/transaction_id.rs"
harness = false

[[bench]]
name = "transaction_serialization"
path = "benches/consensus/transaction_serialization.rs"
harness = false

# Benchmark targets - Node layer
[[bench]]
name = "compact_blocks"
path = "benches/node/compact_blocks.rs"
harness = false

[[bench]]
name = "dandelion_bench"
path = "benches/node/dandelion_bench.rs"
harness = false

[[bench]]
name = "fibre_bench"
path = "benches/node/fibre_bench.rs"
harness = false

[[bench]]
name = "storage_operations"
path = "benches/node/storage_operations.rs"
harness = false

[[bench]]
name = "transport_comparison"
path = "benches/node/transport_comparison.rs"
harness = false

[[bench]]
name = "parallel_block_validation"
path = "benches/node/parallel_block_validation.rs"
harness = false

# Integration benchmarks
[[bench]]
name = "node_sync_and_rpc"
path = "benches/integration/node_sync_and_rpc.rs"
harness = false

[profile.bench]
opt-level = 3
debug = false
strip = false
lto = "thin"
codegen-units = 16

[profile.release]
# When running with --release, use production-like optimizations
opt-level = 3
lto = "thin"
codegen-units = 1

